--- a/ContactList/StoryBoards/Base.lproj/Main.storyboard
+++ b/ContactList/StoryBoards/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="A14-eP-pX0">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="VaQ-Hg-iZA">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
@@ -8,7 +8,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Contacts list-->
+        <!--Contacts-->
         <scene sceneID="DAH-tc-o11">
             <objects>
                 <tableViewController id="OkL-hi-5JN" customClass="ContactListViewController" customModule="ContactList" customModuleProvider="target" sceneMemberID="viewController">
@@ -47,14 +47,14 @@
                             <outlet property="delegate" destination="OkL-hi-5JN" id="jWv-HG-B9P"/>
                         </connections>
                     </tableView>
-                    <tabBarItem key="tabBarItem" title="Contacts" image="person.circle" catalog="system" id="v2R-EB-Skg"/>
-                    <navigationItem key="navigationItem" title="Contacts list" id="pmH-jo-t92"/>
+                    <tabBarItem key="tabBarItem" title="Contacts" image="person.circle" catalog="system" id="vUu-uG-uLe"/>
+                    <navigationItem key="navigationItem" id="pmH-jo-t92"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3h8-Ph-PFj" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="874.04580152671747" y="-111.26760563380282"/>
+            <point key="canvasLocation" x="1825" y="-401"/>
         </scene>
-        <!--Persons list-->
+        <!--Persons-->
         <scene sceneID="Cce-12-aJq">
             <objects>
                 <tableViewController id="UhQ-Qh-dHO" customClass="PersonListViewController" customModule="ContactList" customModuleProvider="target" sceneMemberID="viewController">
@@ -77,28 +77,12 @@
                             <outlet property="delegate" destination="UhQ-Qh-dHO" id="eiP-R9-p6k"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Persons list" id="7Ue-Lb-7cU"/>
+                    <tabBarItem key="tabBarItem" title="Persons" image="person.2.circle" catalog="system" id="zpR-oX-DBO"/>
+                    <navigationItem key="navigationItem" id="7Ue-Lb-7cU"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0JL-6p-eww" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="873" y="618"/>
-        </scene>
-        <!--Persons-->
-        <scene sceneID="jEC-HB-86u">
-            <objects>
-                <navigationController id="FQF-DI-9qZ" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Persons" image="person.2.circle" catalog="system" id="b6t-bQ-EiO"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" largeTitles="YES" id="X23-x7-oOw">
-                        <rect key="frame" x="0.0" y="59" width="393" height="96"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <connections>
-                        <segue destination="UhQ-Qh-dHO" kind="relationship" relationship="rootViewController" id="kgB-hl-FVm"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Gcb-eT-fvZ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-31" y="618"/>
+            <point key="canvasLocation" x="1824" y="251"/>
         </scene>
         <!--Contact Info View Controller-->
         <scene sceneID="tjT-mf-4i3">
@@ -109,22 +93,16 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="38" translatesAutoresizingMaskIntoConstraints="NO" id="rUB-53-0NK">
-                                <rect key="frame" x="16" y="187" width="361" height="152.66666666666663"/>
+                                <rect key="frame" x="16" y="187" width="361" height="78.666666666666686"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ECx-i7-d9A">
-                                        <rect key="frame" x="0.0" y="0.0" width="361" height="36"/>
-                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="30"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BGS-hS-t9n">
-                                        <rect key="frame" x="0.0" y="74" width="361" height="20.333333333333329"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="361" height="20.333333333333332"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="k5W-xr-xv1">
-                                        <rect key="frame" x="0.0" y="132.33333333333331" width="361" height="20.333333333333343"/>
+                                        <rect key="frame" x="0.0" y="58.33333333333335" width="361" height="20.333333333333336"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -143,49 +121,51 @@
                     <navigationItem key="navigationItem" id="ciz-d8-rj1"/>
                     <connections>
                         <outlet property="emailLabel" destination="k5W-xr-xv1" id="3rS-2b-yDY"/>
-                        <outlet property="fullNameLabel" destination="ECx-i7-d9A" id="P9j-jE-abo"/>
                         <outlet property="numberLabel" destination="BGS-hS-t9n" id="N6u-tp-2cI"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hCa-Ru-Wgc" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1775" y="-111"/>
+            <point key="canvasLocation" x="2691" y="-401"/>
         </scene>
-        <!--Item-->
-        <scene sceneID="7Ox-dD-pl7">
-            <objects>
-                <navigationController id="5Al-dw-QnG" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="i1u-df-YdC"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" largeTitles="YES" id="v5g-gH-0H1">
-                        <rect key="frame" x="0.0" y="59" width="393" height="96"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <connections>
-                        <segue destination="OkL-hi-5JN" kind="relationship" relationship="rootViewController" id="eLJ-cZ-CwR"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Uyo-Au-e4h" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-31.297709923664122" y="-111.26760563380282"/>
-        </scene>
-        <!--Start Tab Bar Controller-->
+        <!--Contacts list-->
         <scene sceneID="hmD-Tv-M2h">
             <objects>
                 <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="A14-eP-pX0" customClass="StartTabBarController" customModule="ContactList" customModuleProvider="target" sceneMemberID="viewController">
                     <toolbarItems/>
+                    <navigationItem key="navigationItem" title="Contacts list" id="mm1-TZ-7RZ"/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="lW6-ju-Eki">
                         <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
-                        <segue destination="5Al-dw-QnG" kind="relationship" relationship="viewControllers" id="si5-ME-NlD"/>
-                        <segue destination="FQF-DI-9qZ" kind="relationship" relationship="viewControllers" id="ECx-IZ-luN"/>
+                        <segue destination="OkL-hi-5JN" kind="relationship" relationship="viewControllers" id="BCu-fe-ykL"/>
+                        <segue destination="UhQ-Qh-dHO" kind="relationship" relationship="viewControllers" id="9IZ-8Q-laQ"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nHo-f2-fWW" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-958.01526717557249" y="-111.26760563380282"/>
+            <point key="canvasLocation" x="950" y="-111"/>
+        </scene>
+        <!--Contacts-->
+        <scene sceneID="edC-LE-mw0">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="VaQ-Hg-iZA" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Contacts" image="person.circle" catalog="system" id="v2R-EB-Skg"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" largeTitles="YES" id="Cxy-0V-UYh">
+                        <rect key="frame" x="0.0" y="59" width="393" height="96"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="A14-eP-pX0" kind="relationship" relationship="rootViewController" id="ct2-8m-JUG"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="KY4-N0-gRu" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="109" y="-111"/>
         </scene>
     </scenes>
     <resources>
